crates/toml/tests/snapshots/invalid/string/bad-uni-esc-1.stderr
TOML parse error at line 1, column 24
  |
1 | bad-uni-esc-1 = "val\ue"
  |                        ^
too few unicode value digits, expected unicode hexadecimal value
